fix pop-up menus overlapping navbar

--- a/userChrome.css
+++ b/userChrome.css
@@ -41,9 +41,7 @@
 /* --- STYLE NAVBAR ------------------------------------ */
 
 /* remove padding between toolbar buttons */
-toolbar .toolbarbutton-1 {
-	padding: 0 0 !important;
-}
+toolbar .toolbarbutton-1 { padding: 0 0 !important; }
 
 /* add padding to the right of the last button so that it doesn't touch the edge of the window */
 #PanelUI-menu-button {
@@ -86,6 +84,11 @@ toolbar .toolbarbutton-1 {
 	margin-left: 0.4em !important;
 	margin-right: 0.4em !important;
 }
+
+/* weird hack to keep pop-up menus from overlapping with navbar */
+#widget-overflow { margin: 0 !important; }
+#appMenu-popup { margin: 0 !important; }
+#customizationui-widget-panel { margin: 0 !important; }
 
 /* --- DEBLOAT URLBAR ----------------------------------- */
 
